--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.poopy-img {
+  position: fixed;
+  right: 2%;
+  width: 10% ;
+  bottom: 10%;
+}
 .footer-fix {
   display: flex;
   flex-direction: column;
