--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -46,19 +46,12 @@
   background-color: rgb(44, 163, 179);
   color: rgb(243, 243, 243);
   border-radius: 3px;
+  width: 2rem;
+  height: 2rem;
 }
-/* #sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item .pro-icon-wrapper .pro-item-content {
-  color: rgb(20, 101, 167);
-} */
-/* #sidebar .pro-sidebar-inner .pro-sidebar-layout .active {
-  background-image: linear-gradient(0deg, #fece00 0%, #ffe172 100%);
-} */
-/* #sidebar .logo {
-  padding: 20px;
-} */
-
-/* @media only screen and (max-width: 720px) {
-  html {
-    overflow: hidden;
-  }
-} */
+.pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item {
+  background-color:transparent !important;
+}
+.pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
+  padding: 8px 0px 8px 15px !important;
+}
