--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -55,3 +55,6 @@
 .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
   padding: 8px 0px 8px 15px !important;
 }
+.all-characters-icon{
+  width: 2rem;
+}
