--- a/src/components/card-character/character.css
+++ b/src/components/card-character/character.css
@@ -1,14 +1,55 @@
+.card-character-container{
+    width: 25.5rem;
+    height: 13rem;
+}
 .card-character{
-    width: 35rem;
+    width: 25.5rem;
+    height: 13rem;
     margin: 1rem;
     background: rgb(15, 69, 77);
     color: white;
     border: 2px solid black;
     border-radius: 0 1rem 1rem 0;
-
+    overflow: hidden;
+    transition: 0.2s;
+}
+.card-character:hover {
+    color: white;
+    transform: scale(102%);
 }
 .char-img {
     border-right : 2px solid black;
-    width: 15rem;
-    height: auto;
+    height: 100%;
+    vertical-align: inherit !important;
 }
+
+@media only screen and (max-width: 992px) {
+    .card-character{
+      width: 16rem;
+      border-radius: 0 0 1rem 1rem;
+      height: 27rem;
+    }
+    .card-character-container{
+        width: 16rem;
+        height: 27rem;
+    }
+    .char-img {
+        height: 15rem;
+        border-right: 0;
+        border-bottom: 2px solid black;
+    }
+  }
+  .icon-location {
+      width: 1.5rem;
+  }
+  .favorite-btn {
+      border: 0;
+      background-color: transparent;
+      position: absolute;
+      left: 1.5rem;
+      top: 1rem;
+      font-size: 1.5rem;
+  }
+  .favorite-btn:hover{
+      color: rgb(9, 168, 9);
+  }
