--- a/src/pages/characters.css
+++ b/src/pages/characters.css
@@ -7,10 +7,10 @@
     margin : 2rem auto;
     padding: 0.5rem;
     text-align: center;
-    width: 60%;
+    /* width: 60%; */
 }
 @media only screen and (max-width: 576px) {
 .title-section{
-margin: 2rem 2rem 2rem auto;
+margin: 2rem 2rem 2rem 7.5rem;
 }
 }
