--- a/src/components/cardNoResults/cardNoResults.css
+++ b/src/components/cardNoResults/cardNoResults.css
@@ -5,6 +5,7 @@
     background-color: whitesmoke;
     color: black;
     filter: drop-shadow(0px 0px 1px black) ;
+    width: 15rem;
 }
 .balloon::before {
     content: ''; /* propiedad necesaria */
@@ -19,7 +20,6 @@
     bottom: (Ancho) / 2; /*O la mitad del ancho*/
     transform: skew(45deg);
 }
-
 .poopy-img {
     width: 70%;
     cursor: pointer;
