--- a/src/components/theNav/theNav.css
+++ b/src/components/theNav/theNav.css
@@ -1,5 +1,4 @@
 .navbar {
-  justify-content: end !important;
   backdrop-filter: blur(10px) saturate(180%) !important;
   -webkit-backdrop-filter: blur(10px) saturate(180%) !important;
   background-color: #111928b0 !important;
@@ -7,15 +6,7 @@
   z-index: 1;
   height: 56.5px;
 }
-.navbar .nav-link {
-  color: rgb(177, 172, 172);
-}
-.navbar-logo {
-  display: inline-block;
-  align-items: top;
-  width: 50px;
-  margin: 0;
-}
+
 .icon-search {
   background-color: rgb(44, 163, 179);
   color: rgb(243, 243, 243);
@@ -24,4 +15,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.remove-btn {
+  background-color: transparent;
+  border: 2px solid #888;
+  border-radius: 1rem;
+  color: #888;
+  transition: 0.4s;
+  margin: 2px;
+}
+.remove-btn:hover {
+  border: 2px solid red;
+  color: red;
 }
