--- a/src/App.scss
+++ b/src/App.scss
@@ -25,3 +25,20 @@
   left: 46.5%;
 }
 
+// count fav
+.swym-header--count {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border-radius: 50%;
+  color: #4caf50;
+  font-size: 14px;
+  font-weight: 800;
+  height: 1.3em;
+  min-width: 1.3em;
+  position: absolute;
+  right: 7px;
+  bottom: 28px;
+  z-index: 0;
+}
