--- a/src/components/characterFull/characterFull.css
+++ b/src/components/characterFull/characterFull.css
@@ -1,7 +1,13 @@
 .card-character-full{
-    width: 30rem;
+    width: 50rem;
+    height: 55vh;
     margin: 1rem;
     background: rgb(15, 69, 77);
     color: white;
     border: 2px solid black;
+}
+.image-full {
+    width: 22rem;
+    height: 100%;
+    border-right : 2px solid black;
 }
