--- a/src/components/cardNoResults/cardNoResults.css
+++ b/src/components/cardNoResults/cardNoResults.css
@@ -4,12 +4,12 @@
     z-index: 1;
     background-color: whitesmoke;
     color: black;
-    filter: drop-shadow(0px 0px 1px black) ;
-    width: 15rem;
+    filter: drop-shadow(0px 0px 1px black);
+    width: 20rem;
 }
 .balloon::before {
-    content: ''; /* propiedad necesaria */
-    position: absolute; 
+    content: ""; /* propiedad necesaria */
+    position: absolute;
     z-index: -1;
     width: 10px;
     height: 10px;
@@ -21,6 +21,30 @@
     transform: skew(45deg);
 }
 .poopy-img {
-    width: 70%;
+    width: 8rem;
     cursor: pointer;
-  }
+}
+
+.glass-card {
+    border-radius: 1rem;
+    backdrop-filter: blur(10px) saturate(180%) !important;
+    -webkit-backdrop-filter: blur(10px) saturate(180%) !important;
+    background-color: #111928b0 !important;
+}
+/* 
+@media only screen and (max-width: 992px) {
+    .ballon {
+        width: 16rem;
+        border-radius: 0 0 1rem 1rem;
+        height: 27rem;
+    }
+    .balloon::before {
+        width: 16rem;
+        height: 27rem;
+    }
+    .char-img {
+        height: 15rem;
+        border-right: 0;
+        border-bottom: 2px solid black;
+    }
+} */
